Add balance summary view

--- a/src/app/layout/balances/balances-menu.component.html
+++ b/src/app/layout/balances/balances-menu.component.html
@@ -22,8 +22,8 @@
             <a routerLink="/balances/summary" [routerLinkActive]="['router-link-active']"
                [class.btn-primary]="router.url.startsWith('/balances/summary')"
                [class.btn-outline-secondary]="!router.url.startsWith('/balances/summary')"
-               class="btn disabled">
-                Summary (not available yet)
+               class="btn">
+                Summary
             </a>
         </div>
     </div>
