--- a/src/app/layout/api-keys/exchange-users.component.html
+++ b/src/app/layout/api-keys/exchange-users.component.html
@@ -1,11 +1,12 @@
 <app-page-header [heading]="'API keys'" [icon]="'fa-users'"></app-page-header>
 <div class="row">
     <div class="col-12">
-        <h5>Providing keys allow you to view exchange wallets. Those are not related with arbitrage opportunities monitoring</h5>
+        <h5>API keys allow you to view exchange wallets and balance summary in Pro plan</h5>
+        <h6>Viewing arbitrage opportunities does not require API keys</h6>
     </div>
 </div>
 <div class="card mb-3">
-    <div class="card-header">API keys can be grouped (e.g. 'john', 'test', 'my keys' etc.)
+    <div class="card-header">API keys can be grouped (e.g. 'john', 'test', 'my exchanges', 'wife' etc.)
     </div>
     <div *ngIf="!isLoading && exchangeUsers.length == 0" class="alert alert-primary">
         Start with adding your first API key group, eg your name. Then assign API keys for each
