--- a/src/app/layout/balances/exchange-balance/exchange-balance.component.html
+++ b/src/app/layout/balances/exchange-balance/exchange-balance.component.html
@@ -5,6 +5,37 @@
         <h6>Requires API keys</h6>
     </div>
 </div>
+<div *ngIf="isShowingRealBalance != null" class="row">
+    <div class="col-12">
+        <div class="card text-white bg-warning mt-2 mb-2">
+            <div class="card-header">
+                <div class="flex-row">
+                    <div *ngIf="isShowingRealBalance === true" class="d-block">
+                        You're using Pro plan which gets your exchange balances using your API keys
+                    </div>
+                    <div *ngIf="isShowingRealBalance === false" class="d-block">
+                        You're using Free plan. You're going to see a demonstration balance from exchanges.
+                        <ul>
+                            <li>
+                                To join Pro plan, ping @mikolaj grzaslewicz on autocoin
+                                <a href="https://t.me/joinchat/DQ56VEbfV3uIQlrJphtLbw" target="_blank">telegram group</a>
+                                or send an email to mikolaj.grzaslewicz@gmail.com
+                            </li>
+                            <li>
+                                What's the pricing?
+                                <button
+                                    (click)="textDialog.showWithoutHeader('Currently Pro plan is 10 USDT/month. You can make a decision up to 7 days after payment - to stay with Pro plan or have a refund and stay with Free one.')"
+                                    class="btn btn-sm btn-info">
+                                    <i class="fa fa-question" aria-hidden="true"></i>
+                                </button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="col-12">
         <button class="btn btn-sm btn-info mr-1 mb-1" (click)="refreshExchangeWallets()"
@@ -189,3 +220,4 @@
         </div>
     </div>
 </div>
+<app-text-dialog #textDialog></app-text-dialog>
