--- a/src/app/layout/balances/currency/edit/user-currency-asset-add.component.scss
+++ b/src/app/layout/balances/currency/edit/user-currency-asset-add.component.scss
@@ -8,15 +8,11 @@
     top: 0;
 }
 
-.wallet-address {
-    font-family: monospace;
-}
-
-.currency-asset-add-header {
+.collapsable-header {
     cursor: pointer;
 }
 
-.wallet-dropdown-menu-visible {
+.user-currency-asset-dropdown-menu-visible {
     display: inline-flex;
     left: 2rem;
     top: -0.5rem;
