Add refreshed every 5s to arbitrage monitor view

--- a/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
+++ b/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
@@ -214,7 +214,7 @@
                     <div>
                         <div class="text-muted ml-auto">
                             <small>
-                                Last refresh: {{ (getLastRefreshTime() | date: 'HH:mm:ss') || '-' }}
+                                Last refresh: {{ (getLastRefreshTime() | date: 'HH:mm:ss') || '-' }} (refreshed every 5s)
                             </small>
                         </div>
                     </div>
