Improve currency asset description input help

--- a/src/app/layout/balances/currency/edit/user-currency-asset-add.component.html
+++ b/src/app/layout/balances/currency/edit/user-currency-asset-add.component.html
@@ -71,7 +71,7 @@
                                        id="userCurrencyDescriptionInput"
                                        name="userCurrencyDescriptionInput"
                                        aria-describedby="userCurrencyDescriptionInputHelp">
-                                <small id="userCurrencyDescriptionInputHelp" class="form-text text-muted">Optional, e.g. 'staked at yield app', 'at binance'</small>
+                                <small id="userCurrencyDescriptionInputHelp" class="form-text text-muted">Optional. Something that will help you remind where you keep it or what it is for. e.g. 'staked at yield app', 'at binance', 'printed on piece of paper and kept in safe place'</small>
                             </div>
                         </ng-container>
 
