--- a/src/app/layout/balances/summary/details-dialog/currency-balance-summary-details-dialog.component.html
+++ b/src/app/layout/balances/summary/details-dialog/currency-balance-summary-details-dialog.component.html
@@ -3,49 +3,83 @@
         <h4 class="modal-title">{{ currencySummaryDetails.currency }}</h4>
     </div>
     <div class="modal-body">
-        <div class="border-bottom-1">
-            <h5>{{ currencySummaryDetails.wallets.length }} wallets</h5>
-            <table *ngIf="currencySummaryDetails.wallets.length > 0" class="table table-sm table-hover">
-                <thead>
-                <th>Address</th>
-                <th>Balance</th>
-                <th>USD value</th>
-                </thead>
-                <tbody>
-                <tr *ngFor="let wallet of currencySummaryDetails.wallets">
-                    <td class="wallet-address">{{ wallet.walletAddress }}</td>
-                    <td>{{ wallet.balance | number : '1.8-8' }}</td>
-                    <td>${{ getWalletUsdBalance(wallet) | number : '1.2-2' }}</td>
-                </tr>
-                <tr *ngIf="currencySummaryDetails.wallets.length > 1">
-                    <td></td>
-                    <td class="font-weight-bold">{{ getTotalWalletsBalance() | number : '1.8-8' }}</td>
-                    <td class="font-weight-bold">${{ getTotalWalletsUsdValue() | number : '1.2-2' }}</td>
-                </tr>
-                </tbody>
-            </table>
+        <div class="card mb-1">
+            <div class="card-header">
+                <h5 [class.text-muted]="currencySummaryDetails.wallets.length == 0">{{ currencySummaryDetails.wallets.length }} wallets</h5>
+            </div>
+            <div *ngIf="currencySummaryDetails.wallets.length > 0" class="card-body">
+                <table class="table table-sm table-hover">
+                    <thead>
+                    <th>Address</th>
+                    <th>Balance</th>
+                    <th>USD value</th>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let wallet of currencySummaryDetails.wallets">
+                        <td class="wallet-address">{{ wallet.walletAddress }}</td>
+                        <td>{{ wallet.balance | number : '1.8-8' }}</td>
+                        <td>${{ getUsdBalance(wallet) | number : '1.2-2' }}</td>
+                    </tr>
+                    <tr *ngIf="currencySummaryDetails.wallets.length > 1">
+                        <td></td>
+                        <td class="font-weight-bold">{{ getTotalBalance(currencySummaryDetails.wallets) | number : '1.8-8' }}</td>
+                        <td class="font-weight-bold">${{ getTotalUsdValue(currencySummaryDetails.wallets) | number : '1.2-2' }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
-        <div class="padding-top-1">
-            <h5>{{ currencySummaryDetails.exchanges.length }} exchanges</h5>
-            <table *ngIf="currencySummaryDetails.exchanges.length > 0" class="table table-sm table-hover">
-                <thead>
-                <th>Exchange</th>
-                <th>Balance</th>
-                <th>USD value</th>
-                </thead>
-                <tbody>
-                <tr *ngFor="let exchange of currencySummaryDetails.exchanges">
-                    <td>{{ exchange.exchangeName }}</td>
-                    <td>{{ exchange.balance | number : '1.8-8' }}</td>
-                    <td>${{ getExchangeUsdBalance(exchange) | number : '1.2-2' }}</td>
-                </tr>
-                <tr *ngIf="currencySummaryDetails.exchanges.length > 1">
-                    <td></td>
-                    <td class="font-weight-bold">{{ getTotalExchangesBalance() | number : '1.8-8' }}</td>
-                    <td class="font-weight-bold">${{ getTotalExchangesUsdValue() | number : '1.2-2' }}</td>
-                </tr>
-                </tbody>
-            </table>
+        <div class="card mb-1">
+            <div class="card-header">
+                <h5 [class.text-muted]="currencySummaryDetails.currencyAssets.length == 0">{{ currencySummaryDetails.currencyAssets.length }} currency assets</h5>
+            </div>
+            <div *ngIf="currencySummaryDetails.currencyAssets.length > 0" class="card-body">
+                <table class="table table-sm table-hover">
+                    <thead>
+                    <th>Description</th>
+                    <th>Balance</th>
+                    <th>USD value</th>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let currencyAsset of currencySummaryDetails.currencyAssets">
+                        <td>{{ currencyAsset.description }}</td>
+                        <td>{{ currencyAsset.balance | number : '1.8-8' }}</td>
+                        <td>${{ getUsdBalance(currencyAsset) | number : '1.2-2' }}</td>
+                    </tr>
+                    <tr *ngIf="currencySummaryDetails.currencyAssets.length > 1">
+                        <td></td>
+                        <td class="font-weight-bold">{{ getTotalBalance(currencySummaryDetails.currencyAssets) | number : '1.8-8' }}</td>
+                        <td class="font-weight-bold">${{ getTotalUsdValue(currencySummaryDetails.currencyAssets) | number : '1.2-2' }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                <h5 [class.text-muted]="currencySummaryDetails.exchanges.length == 0">{{ currencySummaryDetails.exchanges.length }} exchanges</h5>
+            </div>
+            <div *ngIf="currencySummaryDetails.exchanges.length > 0" class="card-body">
+                <table class="table table-sm table-hover">
+                    <thead>
+                    <th>Exchange</th>
+                    <th>Balance</th>
+                    <th>USD value</th>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let exchange of currencySummaryDetails.exchanges">
+                        <td>{{ exchange.exchangeName }}</td>
+                        <td>{{ exchange.balance | number : '1.8-8' }}</td>
+                        <td>${{ getUsdBalance(exchange) | number : '1.2-2' }}</td>
+                    </tr>
+                    <tr *ngIf="currencySummaryDetails.exchanges.length > 1">
+                        <td></td>
+                        <td class="font-weight-bold">{{ getTotalBalance(currencySummaryDetails.exchanges) | number : '1.8-8' }}</td>
+                        <td class="font-weight-bold">${{ getTotalUsdValue(currencySummaryDetails.exchanges) | number : '1.2-2' }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
     <div class="modal-footer">
