--- a/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
+++ b/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
@@ -17,7 +17,7 @@
                     <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
                 </div>
                 <i class="fa fa-usd" aria-hidden="true"></i>
-                Currency balances of all wallets
+                Summary of all your wallets
             </div>
             <div class="card-body">
                 <h6 *ngIf="currencyBalances.length ==0">No wallets added yet</h6>
@@ -27,6 +27,7 @@
                         <tr>
                             <th scope="col">Currency</th>
                             <th scope="col">Total</th>
+                            <th scope="col">USD price</th>
                             <th scope="col">USD value</th>
                         </tr>
                         </thead>
@@ -39,10 +40,14 @@
                                 {{currencyBalance.balance }}
                             </td>
                             <td>
+                                {{currencyBalance.usdPrice | number : '1.2-2'}}
+                            </td>
+                            <td>
                                 {{currencyBalance.usdBalance | number : '1.2-2'}}
                             </td>
                         </tr>
                         <tr>
+                            <td></td>
                             <td></td>
                             <td></td>
                             <td class="font-weight-bold">{{ getTotalUsdBalance(currencyBalances) | number : '1.2-2' || '-' }}</td>
