--- a/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
+++ b/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
@@ -2,7 +2,7 @@
 <div #hideWalletMenuLayer (click)="hideWalletMenuIfAnyOpen(hideWalletMenuLayer)" class="d-none layer-for-hiding-add-wallet-menu"></div>
 <div class="row">
     <div class="col-12">
-        <h5>Balance of many wallets in one place</h5>
+        <h5>Track automatically balance of many wallets in one place</h5>
         <div class="card mb-3">
             <div (click)="goToAddNewWalletView()" class="card-header wallet-add-header">
                 <button class="btn btn-primary btn-sm">
@@ -14,7 +14,8 @@
         <div class="card mb-3">
             <div class="card-header">
                 <div *ngIf="isFetchCurrencyBalancesRequestPending" class="progress mb-2">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
+                         style="width: 100%;"></div>
                 </div>
                 <i class="fa fa-usd" aria-hidden="true"></i>
                 Summary of all your wallets
@@ -60,7 +61,8 @@
         <div class="card">
             <div class="card-header">
                 <div *ngIf="isFetchWalletsRequestPending" class="progress mb-2">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
+                         style="width: 100%;"></div>
                 </div>
                 <button (click)="refreshWalletsBalance()" class="btn btn-primary btn-sm" [disabled]="isFetchWalletsRequestPending">
                     <i class="fa fa-refresh" aria-hidden="true"></i>
@@ -104,7 +106,13 @@
                                 {{wallet.currency}}
                             </th>
                             <td>
-                                <span class="wallet-address">{{wallet.walletAddress}}</span>
+                                <span *ngIf="wallet.blockChainExplorerUrl == null" class="wallet-address">
+                                    {{wallet.walletAddress}}
+                                </span>
+
+                                <span *ngIf="wallet.blockChainExplorerUrl != null" class="wallet-address">
+                                    <a target="_blank" href="{{wallet.blockChainExplorerUrl}}">{{wallet.walletAddress}}</a>
+                                </span>
                             </td>
                             <td>
                                 {{wallet.description}}
