--- a/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
+++ b/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
@@ -114,8 +114,7 @@
                                     <a target="_blank" href="{{wallet.blockChainExplorerUrl}}">{{wallet.walletAddress}}</a>
                                 </span>
                             </td>
-                            <td>
-                                {{wallet.description}}
+                            <td [innerHTML]="wallet.description | linkify">
                             </td>
                             <td>
                                 {{wallet.balance}}
