--- a/src/app/layout/balances/currency/user-currency-asset-balance.component.html
+++ b/src/app/layout/balances/currency/user-currency-asset-balance.component.html
@@ -105,8 +105,7 @@
                                 <th scope="row">
                                     {{userCurrencyAsset.currency}}
                                 </th>
-                                <td>
-                                    {{userCurrencyAsset.description}}
+                                <td [innerHTML]="userCurrencyAsset.description | linkify">
                                 </td>
                                 <td>
                                     {{userCurrencyAsset.balance}}
